<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="273dp"
        android:layout_height="108dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="126dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <Button
        android:id="@+id/appCompatButtonLogin"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:background="@color/colorTextHint"
        android:text="@string/text_login" />

    <TextView
        android:id="@+id/textViewLinkRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:text="@string/text_not_member"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="16sp" />


</RelativeLayout>


