<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    tools:context=".uregister">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="126dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="162dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"

        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/black"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/black" />


    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:ems="10"
        android:hint="Phone"
        android:inputType="phone"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/black" />




    <Button
        android:id="@+id/appCompatButtonLogin"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:background="@color/colorTextHint"
        android:text="@string/text_register" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/TextViewLoginLink"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:gravity="center"
        android:text="@string/already_a_member_login"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="16sp" />


</RelativeLayout>